# dara

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  README.md  dara.yaml  pyproject.toml
.github/workflows/: build_sphinx.yaml  pytest.yaml  ruff.yaml
ar3l_search/: __init__.py  bgmn_worker.py  cif2str.py  config.toml  download_bgmn.py  generate_control_file.py  refine.py  utils.py
ar3l_search/3dparty/: download_bgmn.py
ar3l_search/3dparty/spglib_db/: spacegrp.xml  spg.json
bgmn/: download_bgmn.py
dataset/: README.md
dataset/binary_reactions/: 2Fe3O4-3Y2O3_1000C_60min.xrdml  2FeC2O4(H2O)2-Y2O3_200C_60min.xrdml  Bi2O3-2MoO3_400C_60min.xrdml  Bi2O3-Nb2O5_500C_60min.xrdml  Bi2O3-V2O5_400C_60min.xrdml  CaCO3-NH4H2PO4_200C_60min.xrdml  CoO-WO3_900C_60min.xrdml  CoO-ZnO_1100C_60min.xrdml  Cr2O3-2MnO_1100C_60min.xrdml  Cr2O3-2PbO_500C_60min.xrdml  Cr2O3-2ZnO_1100C_60min.xrdml  Cr2O3-V2O5_400C_60min.xrdml  CuO-MnO_800C_60min.xrdml  Fe2O3-2TiO2_1000C_60min.xrdml  Fe2O3-Nb2O5_900C_60min.xrdml  Fe3O4-3SrCO3_900C_60min.xrdml  Fe3O4-3ZnO_1000C_60min.xrdml  NH4H2PO4-Na2CO3_200C_60min.xrdml  V2O5-2ZnO_400C_60min.xrdml
dataset/precursor_mixture/: Cr2O3_Fe3O4_HfO2_In2O3.12-min.xrdml  Cr2O3_Fe3O4_HfO2_In2O3.2-min.xrdml  Cr2O3_Fe3O4_Y2O3.12-min.xrdml  Cr2O3_Fe3O4_Y2O3.2-min.xrdml  Cr2O3_Li2TiO3_LiCoO2_K2SO4.12-min.xrdml  Cr2O3_Li2TiO3_LiCoO2_K2SO4.2-min.xrdml  Fe3O4_CuO_Ga2O3.12-min.xrdml  Fe3O4_CuO_Ga2O3.2-min.xrdml  Fe3O4_Nb2O5_Bi2O3-alpha.12-min.xrdml  Fe3O4_Nb2O5_Bi2O3-alpha.2-min.xrdml  GeO2_La(OH)3_ZrO2_SnO2.12-min.xrdml  GeO2_La(OH)3_ZrO2_SnO2.2-min.xrdml  GeO2_Li2TiO3_In2O3.12-min.xrdml  GeO2_Li2TiO3_In2O3.2-min.xrdml  GeO2_MnCO3_ZrO2_Bi2O3-alpha.12-min.xrdml  GeO2_MnCO3_ZrO2_Bi2O3-alpha.2-min.xrdml  GeO2_Nb2O5_In2O3_K2SO4.12-min.xrdml  GeO2_Nb2O5_In2O3_K2SO4.2-min.xrdml  GeO2_ZrO2_Bi2O3-alpha.12-min.xrdml  GeO2_ZrO2_Bi2O3-alpha.2-min.xrdml  HfO2_K2SO4_Bi2O3-beta.12-min.xrdml  HfO2_K2SO4_Bi2O3-beta.2-min.xrdml  HfO2_La(OH)3_Li3PO4_Bi2O3-beta.12-min.xrdml  HfO2_La(OH)3_Li3PO4_Bi2O3-beta.2-min.xrdml  HfO2_La(OH)3_Nb2O5_CaCO3.12-min.xrdml  HfO2_La(OH)3_Nb2O5_CaCO3.2-min.xrdml  HfO2_La(OH)3_Y2O3.12-min.xrdml  HfO2_La(OH)3_Y2O3.2-min.xrdml  HfO2_Li3PO4_Bi2O3-beta.12-min.xrdml  HfO2_Li3PO4_Bi2O3-beta.2-min.xrdml  In2O3_0p3022-La(OH)3_0p5014-TiO2_0p2004--2min.xrdml  In2O3_0p3022-La(OH)3_0p5014-TiO2_0p2004--8min.xrdml  In2O3_0p5002-MnCO3_0p5000--2min.xrdml  In2O3_0p5002-MnCO3_0p5000--8min.xrdml  La(OH)3_Ga2O3_Bi2O3-alpha.12-min.xrdml  La(OH)3_Ga2O3_Bi2O3-alpha.2-min.xrdml  Li2CO3_0p9001-ZrO2_0p1000--2min.xrdml  Li2CO3_0p9001-ZrO2_0p1000--8min.xrdml  Li2CO3_CuO_SnO2_Bi2O3-beta.12-min.xrdml  Li2CO3_CuO_SnO2_Bi2O3-beta.2-min.xrdml  (+100 more)
docs/: .gitignore  conf.py  index.md  index.rst  install.md  tutorial_grid.md  tutorials.md  web_server.md
logo/: draw_logo.ipynb
notebooks/: .gitignore  Untitled.ipynb  phase_search.ipynb  tutorial.ipynb
notebooks/refinement_tutorial_data/: CaNi(PO3)4_15_sym.str
notebooks/tutorial_data/: Ca(OH)2_(NH4)2HPO4_NiO_recipe.json  rxn_manifest.json
notebooks/tutorial_data/refinement_CaNi(PO3)4_800_240_Ca(OH)2_(NH4)2HPO4_NiO/: CaNi(PO3)4_15_sym.str  CaNi(PO3)4_800_240_Ca(OH)2_(NH4)2HPO4_NiO.dia  CaNi(PO3)4_800_240_Ca(OH)2_(NH4)2HPO4_NiO.lst  CaNi(PO3)4_800_240_Ca(OH)2_(NH4)2HPO4_NiO.par  CaNi(PO3)4_800_240_Ca(OH)2_(NH4)2HPO4_NiO.sav  NiO_225_sym.str
scripts/: README.md  download_bgmn.py  filter_cod.py  filter_icsd.py  parse_icsd.py  run_binary_reaction.py  run_precursor_mixture.py
src/dara/: __init__.py  bgmn_worker.py  cif.py  cif2str.py  cli.py  config.py  config.toml  eflech_worker.py  filter_icsd.py  generate_control_file.py  icsd.py  jobs.py  par_parser.py  parse_result.py  peak_detection.py  plot.py  refine.py  result.py  results.py  schema.py  settings.py  structure_db.py  utils.py  xrd.py  xrdml2xy.py
src/dara/bgmn/: download_bgmn.py
src/dara/bgmn/__MACOSX/: ._BGMNwin
src/dara/data/: README.md
src/dara/data/BGMN-Templates/Devices/: Aeris-fds-Pixcel1d-Medipix3.geq  CSU-D8-LynxEyeXE.SAV  CSU-D8-LynxEyeXE.geq  CSU-D8-LynxEyeXE.ger  CSU-D8-LynxEyeXE.tpl  LBL-d8-LynxEyeXE.geq  synchrotron.SAV  synchrotron.geq  synchrotron.ger  synchrotron.tpl  ucb-xrdynamic500-anton-paar.geq
src/dara/data/spglib_db/: make_spg_db.py  spg.json
src/dara/phase_prediction/: __init__.py  base.py  predict.py  rn.py  rxn_ca.py  structure.py
src/dara/prediction/: base.py  core.py  rn.py  rxn_ca.py
src/dara/search/: __init__.py  _search_phases.py  core.py  data_model.py  node.py  peak_matcher.py  search_phase.py  tree.py
src/dara/server/: api_router.py  app.py  setting.py
src/dara/server/ui/: README.md  gatsby-config.js  gatsby-node.js  package-lock.json  package.json
src/dara/server/ui/public/: 404.html  57410fc8030deeedff04bbfabf19294f9925e2d9-eb8847e260a45c34a1f2.js  57410fc8030deeedff04bbfabf19294f9925e2d9-eb8847e260a45c34a1f2.js.map  6f797cde19b29064589bb5dc1179e6fed6df5f5a-634d22334f8432b3094d.js  6f797cde19b29064589bb5dc1179e6fed6df5f5a-634d22334f8432b3094d.js.map  806-b910bba0608d70eeaf63.js.map  app-2cfae092353a9ebe7580.js  app-2cfae092353a9ebe7580.js.map  app-b33b585ff4011f009546.js  app-b33b585ff4011f009546.js.map  app-b757238a74a01857068f.js  app-b757238a74a01857068f.js.map  cd1d783e2058bb475f378b4ae5e70b80a1e199cb-5499e4bd4b88271b8c36.js  cd1d783e2058bb475f378b4ae5e70b80a1e199cb-5499e4bd4b88271b8c36.js.map  cd1d783e2058bb475f378b4ae5e70b80a1e199cb-a2b2ded70df4b7b03c29.js  cd1d783e2058bb475f378b4ae5e70b80a1e199cb-a2b2ded70df4b7b03c29.js.map  chunk-map.json  commons-056c96522dea66b76798.js  commons-056c96522dea66b76798.js.map  component---src-pages-index-js-c83dc296d55cf9e28033.js  component---src-pages-index-js-c83dc296d55cf9e28033.js.map  component---src-pages-index-js-ed1b1145e1021ebb5c41.js  component---src-pages-index-js-ed1b1145e1021ebb5c41.js.map  component---src-pages-submit-js-4603b9e115ee9963ef3d.js  (+17 more)
tests/: test_bgmn_handler.py  test_cif2str.py  test_do_refinement.py  test_refinement.py  test_structure_db.py
tests/test_data/: Bi25FeO39.cif  Bi25FeO39.str  Bi2Fe4O9.cif  Bi2Fe4O9.str  BiFeO3.cif  BiFeO3.str  BiFeO3.xy
(+14 files in other folders)
