[build-system]
requires = ["setuptools >= 42", "versioningit ~= 1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ar3l_search"
description = "BGMN driver for refinement"
readme = "README.md"
keywords = ["high-throughput experiments", "workflow", "XRD analysis"]
license = { text = "modified MIT" }
authors = [
    { name = "Yuxing Fei", email = "yuxingfei@berkeley.edu" }
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Database :: Front-Ends",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.7.0"
dependencies = [
    "toml>=0.10.1",
    "pymatgen>=2022.0.8",
    "asteval>=0.9.26",
    "requests"
]

[project.optional-dependencies]
tests = ["pytest-cov==4.1.0", "pytest==7.4.1"]

[project.urls]
repository = "https://github.com/idocx/ar3l-search/"
#changelog = ""

[project.scripts]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ar3l_search = ["py.typed", "3dparty/**"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "tests.*"]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.flake8]
max-line-length = 400 # jobflow uses 88. Ensure to change this back to 88 in the future
max-doc-length = 400 # jobflow uses 88. Ensure to change this back to 88 in the future
select = "C, E, F, W, B"
extend-ignore = "E203, W503, E501, F401, RST21, D102"
ignore = "E203, W503, E501, F401, RST21, D102"
min-python-version = "3.8.0"
docstring-convention = "numpy"
rst-roles = "class, func, ref, obj"

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true

[tool.coverage.run]
include = ["src/*"]
parallel = true
branch = true

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    '^\s*@overload( |$)',
    '^\s*assert False(,|$)',
    'if TYPE_CHECKING:',
    'if typing.TYPE_CHECKING:',
]

[tool.ruff]
target-version = "py38"
ignore-init-module-imports = true
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "PLE", # pylint error
    "PLW", # pylint warning
    "Q", # flake8-quotes
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "TID", # tidy imports
    "UP", # pyupgrade
    "W", # pycodestyle
    "YTT", # flake8-2020
]
ignore = ["B028", "PLW0603", "RUF013", "D100", "D404", "D401", "D205"]
pydocstyle.convention = "numpy"
line-length = 130

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
